2012-07-24  Mark Wielaard  <mjw@redhat.com>

	* TODO: Add note on shdrs after elf_cntl (ELF_C_FDREAD).

2012-06-22  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set version to 0.154.

2012-01-24  Mark Wielaard  <mjw@redhat.com>

	* COPYING: Fix address. Updated version from gnulib.

2012-01-23  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set version to 0.153, update copyright years.

2012-01-20  Roland McGrath  <roland@hack.frob.com>

	* configure.ac: Handle --enable-deterministic-archives.

2011-10-08  Roland McGrath  <roland@hack.frob.com>

	* configure.ac (eu_version): Use sed instead of ${x/y/z} syntax.
	Use POSIX.2 $((...)) syntax instead of $[...].
	Reported by Mike Frysinger <vapier@gentoo.org>.

2011-10-08  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac: Fix use of AC_ARG_ENABLE to handle $enableval correctly.

2011-10-02  Ulrich Drepper  <drepper@gmail.com>

	* configure.ac: Check for __cxa_demangle in libstdc++.

2011-02-08  Roland McGrath  <roland@redhat.com>

	* configure.ac (C99 check): Use AC_LANG_SOURCE.

	* configure.ac (ALL_LINGUAS): Remove variable, now obsolete.

2010-09-13  Ulrich Drepper  <drepper@redhat.com>

	* configure.ac (ALL_LINGUAS): Add languages which have some
	translations.

2010-04-15  Roland McGrath  <roland@redhat.com>

	* configure.ac (LOCALEDIR, DATADIRNAME): Removed.

2009-09-21  Ulrich Drepper  <drepper@redhat.com>

	* configure.ac: Update for more modern autoconf.

2009-08-26  Roland McGrath  <roland@redhat.com>

	* configure.ac (zip_LIBS): Check for liblzma too.

2009-04-19  Roland McGrath  <roland@redhat.com>

	* configure.ac (eu_version): Round down here, not in version.h macros.

2009-04-17  Roland McGrath  <roland@redhat.com>

	* configure.ac (eu_version): Compute number 1000 times larger,
	let $PACKAGE_VERSION be x.y.z as well as x.y (implied x.y.0).

2009-01-23  Roland McGrath  <roland@redhat.com>

	* configure.ac (zlib check): Check for gzdirect, need zlib >= 1.2.2.3.
