@@ -1,5 +1,9 @@
 2012-07-24  Mark Wielaard  <mjw@redhat.com>
 
+	* configure.ac: Add AX_CXX_COMPILE_STDCXX_0X check.
+
+2012-07-24  Mark Wielaard  <mjw@redhat.com>
+
 	* TODO: Add note on shdrs after elf_cntl (ELF_C_FDREAD).
 
 2012-06-22  Mark Wielaard  <mjw@redhat.com>
